--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,3 +1,9 @@
+.main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .movie-container{
     padding: 10px;
     margin: 10px;
